--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "^11.3.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
+    "dev":"serve --single ./build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
